@@ -6,6 +6,8 @@ Bugs fixed
 
 * #1419: Generated i18n sphinx.js files are missing message catalog entries
   from '.js_t' and '.html'. The issue was introduced from Sphinx-1.1
+* #1363: Fix i18n: missing python domain's cross-references with currentmodule
+  directive or currentclass directive.
 
 
 Release 1.2.2 (released Mar 2, 2014)
